<resources>
    <string name="app_name">DevRecipeReminder</string>
    <string name="add_ricetta">Aggiungi ricetta</string>
    <string name="hint_ricetta">Ricetta…</string>
    <string name="button_save">Salva</string>
    <string name="empty_not_saved">Ricetta non salvata perché non hai selezionato il tipo.</string>
    <string name="descrizione_ricetta">Descrizione ricetta</string>
    <string name="nome_ricetta">Nome ricetta</string>
    <string name="tipi_di_ricetta">Tipi di ricetta:</string>
    <string name="button_elimina">Elimina ricetta</string>
    <string name="button_esegui">Esegui ricetta</string>
    <string name="filter_ricetta_type">Filtra il tipo di ricetta</string>
    <string name="all_recipe_types">Tutti</string>
    <string name="type_text_view">Tipo di ricetta filtrata</string>
    <string name="bought_item">Comprato un elemento</string>
    <string name="hint_nuovo_oggetto">Nuovo oggetto</string>
    <string name="add_lista_item">Aggiungi un oggetto alla lista della spesa</string>
    <string name="compose_shortcut_short_label1">Aggiungi</string>
    <string name="compose_shortcut_long_label1">Aggiungi un oggetto</string>
    <string name="compose_disabled_message1">Aggiunta non disponibile</string>
</resources>