<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/existing_ricetta_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <EditText
        android:id="@+id/nome_ricetta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/nome_ricetta"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textCapSentences"
        android:minHeight="48dp"
        tools:ignore="LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/descrizione_ricetta"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:hint="@string/descrizione_ricetta"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textNoSuggestions|textCapSentences"
        tools:ignore="LabelFor,TextContrastCheck" />

    <RadioGroup
        android:id="@+id/tipo_choice_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/tipi_di_ricetta"
            android:textSize="10pt"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="0"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/button_esegui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="0"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/button_esegui"
        android:textColor="@color/buttonLabel"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_elimina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_weight="0"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/button_elimina"
        android:textColor="@color/buttonLabel"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
